--- a/themes/mukurtu_v4/css/style.css
+++ b/themes/mukurtu_v4/css/style.css
@@ -6981,30 +6981,16 @@ header {
 
 @media (min-width: 60rem) {
   .taxonomy-term-page .grid:has(.views-row) {
-    -webkit-column-count: 1;
-       -moz-column-count: 1;
-            column-count: 1;
-  }
-}
-.taxonomy-term-page .grid:has(.views-row) .view {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: var(--v-space-3xs);
-}
-@media (min-width: 60rem) {
-  .taxonomy-term-page .grid:has(.views-row) .view {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
   }
 }
 @media (min-width: 80rem) {
-  .taxonomy-term-page .grid:has(.views-row) .view {
-    gap: var(--v-space-2xs);
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-}
-@media (min-width: 90rem) {
-  .taxonomy-term-page .grid:has(.views-row) .view {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .taxonomy-term-page .grid:has(.views-row) {
+    -webkit-column-count: 4;
+       -moz-column-count: 4;
+            column-count: 4;
   }
 }
 
